# christmas-tree

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  script.py
christmas_tree/calculations/: compute_coords.py  simulation.ipynb  utils_simulation.py
christmas_tree/camera/: calibrate.py  capture_frames.py
christmas_tree/common/: __init__.py  effect_registry.py  settings.py  utils.py
christmas_tree/common/effects/: color_bloom.py  colored_wave.py  cyllinders.py  expanding_ball.py  planar_wave.py  radiating_spheres.py  rain.py  rainbow.py  rotating_quadrants.py  rotating_ring.py  rotating_stripes.py  simple_blinking.py  spiral.py  ua_flag.py  xz_rotation.py
christmas_tree/rpi/: light_show.py  requirements.txt  server.py
christmas_tree/rpi/templates/: index.html
tests/: test_effect_registry.py
